feat: add container and screen sizes

--- a/docs/migration/v2.x.x-to-v3.0.0.md
+++ b/docs/migration/v2.x.x-to-v3.0.0.md
@@ -1,5 +1,12 @@
 ## Migration Beta (1.x.x) ➡ 2.0.0
 
+## breakpoints
+
+We updated some breakpoints to align with design:
+
+- `$db-screen-size-xs: 360` ➡️ `$db-screen-size-xs: 320`
+- `$db-screen-size-sm: 720` ➡️ `$db-screen-size-sm: 768`
+
 ## icon-before/-after
 
 We renamed the `data-icon-after` and `data-icon-before` properties to `data-icon-trailing` and `data-icon-leading`,
