--- a/docs/migration/v2.x.x-to-v3.0.0.md
+++ b/docs/migration/v2.x.x-to-v3.0.0.md
@@ -9,6 +9,45 @@ Furthermore, we added a trailing icon to the `db-button`/`DBButton` component.
 You can still use `db-icon`/`icon` in most elements/components, which results in showing the default icon.
 Most of the time this will be the leading icon, but in some cases it might be the trailing icon, depending on the component.
 
+## Aria properties in components
+
+### `db-button`/`DBButton`
+
+- **Removed**: `describedbyid` property, just use `aria-describedby`
+- **Removed**: `ariaexpanded` property, just use `aria-expanded`
+- **Removed**: `ariapressed` property, just use `aria-pressed`
+- **Removed**: `label` property, just use `aria-label`
+
+### `db-link`/`DBLink`
+
+- **Removed**: `selected` property, just use `aria-selected`
+- **Removed**: `current` property, just use `aria-current`
+- **Removed**: `label` property, just use `aria-label`
+
+### `db-navigation`/`DBNavigation`
+
+- **Removed**: `labelledBy` property, just use `aria-labelledby`
+
+### `db-radio`/`DBRadio`
+
+- **Removed**: `describedbyid` property, just use `aria-describedby`
+
+### `db-switch`/`DBSwitch`
+
+- **Removed**: `describedbyid` property, just use `aria-describedby`
+
+### `db-tab-item`/`DBTabItem`
+
+- **Removed**: `controls` property, just use `aria-controls`
+
+### `db-tab-panel`/`DBTabPanel`
+
+- **Removed**: `labelledBy` property, just use `aria-labelledby`
+
+### `db-tag`/`DBTag`
+
+- **Removed**: `disabled` property, use `disabled` on child component like `button` or `a` tag
+
 ## Automate migration via CLI
 
 We provide a CLI tool to auto migrate your source code. Use this command in your repository:
