--- a/docs/migration/v2.x.x-to-v3.0.0.md
+++ b/docs/migration/v2.x.x-to-v3.0.0.md
@@ -1,5 +1,14 @@
 ## Migration Beta (1.x.x) ➡ 2.0.0
 
+## db-button/DBButton type
+
+We changed the behaviour of the `type` property in the `db-button`/`DBButton` component.
+Those changes will only affect React and Vue users.
+If you use `onClick` or `@click` you will get `type=button` as default, otherwise it will be `type=submit`.
+You can still set the `type` property manually, to overwrite this.
+Angular and Web Components users will not be affected by this change, the default will be `button`, because click event listeners can't be undefined in the frameworks.
+Please provide the correct `type` property in your code anyhow as a best practise.
+
 ## icon-before/-after
 
 We renamed the `data-icon-after` and `data-icon-before` properties to `data-icon-trailing` and `data-icon-leading`,
