chore: remove button state

--- a/docs/migration/v2.x.x-to-v3.0.0.md
+++ b/docs/migration/v2.x.x-to-v3.0.0.md
@@ -2,12 +2,19 @@
 
 ## db-button/DBButton type
 
+### `type` property
+
 We changed the behaviour of the `type` property in the `db-button`/`DBButton` component.
 Those changes will only affect React and Vue users.
 If you use `onClick` or `@click` you will get `type=button` as default, otherwise it will be `type=submit`.
 You can still set the `type` property manually, to overwrite this.
 Angular and Web Components users will not be affected by this change, the default will be `button`, because click event listeners can't be undefined in the frameworks.
 Please provide the correct `type` property in your code anyhow as a best practise.
+
+### `state` property
+
+We removed the `state` property from the `db-button`/`DBButton` component for now.
+It wasn't implemented in any framework causing some confusion, and we will reintroduce it in a future version.
 
 ## icon-before/-after
 
