feat: add container and screen sizes (#4486)
* feat: add container and screen sizes

* auto update snapshots (#4488)

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Maximilian Franzke <787658+mfranzke@users.noreply.github.com>

--- a/docs/migration/v2.x.x-to-v3.0.0.md
+++ b/docs/migration/v2.x.x-to-v3.0.0.md
@@ -16,6 +16,13 @@ Please provide the correct `type` property in your code anyhow as a best practis
 We removed the `state` property from the `db-button`/`DBButton` component for now.
 It wasn't implemented in any framework causing some confusion, and we will reintroduce it in a future version.
 
+## breakpoints
+
+We updated some breakpoints to align with design:
+
+- `$db-screen-size-xs: 360` ➡️ `$db-screen-size-xs: 320`
+- `$db-screen-size-sm: 720` ➡️ `$db-screen-size-sm: 768`
+
 ## icon-before/-after
 
 We renamed the `data-icon-after` and `data-icon-before` properties to `data-icon-trailing` and `data-icon-leading`,
