--- a/docs/migration/v2.x.x-to-v3.0.0.md
+++ b/docs/migration/v2.x.x-to-v3.0.0.md
@@ -26,7 +26,7 @@ If you want to use an interactive card, you should wrap the card with the correc
 
 ```html
 <!--Angular-->
-<button>
+<button type="button" aria-label="button copy">
 	<db-card behavior="interactive">
 		<!-- card content -->
 	</db-card>
