--- a/docs/migration/v2.x.x-to-v3.0.0.md
+++ b/docs/migration/v2.x.x-to-v3.0.0.md
@@ -33,7 +33,7 @@ If you want to use an interactive card, you should wrap the card with the correc
 </button>
 
 <!--React/Vue-->
-<button>
+<button type="button" aria-label="button copy">
 	<DBCard behavior="interactive">
 		<!-- card content -->
 	</DBCard>
