Apply suggestions from code review

--- a/docs/migration/v2.x.x-to-v3.0.0.md
+++ b/docs/migration/v2.x.x-to-v3.0.0.md
@@ -26,14 +26,14 @@ If you want to use an interactive card, you should wrap the card with the correc
 
 ```html
 <!--Angular-->
-<button type="button" aria-label="button copy">
+<button type="button">
 	<db-card behavior="interactive">
 		<!-- card content -->
 	</db-card>
 </button>
 
 <!--React/Vue-->
-<button type="button" aria-label="button copy">
+<button type="button">
 	<DBCard behavior="interactive">
 		<!-- card content -->
 	</DBCard>
