--- a/showcases/patternhub/pages/foundations/playgrounds/index.mdx
+++ b/showcases/patternhub/pages/foundations/playgrounds/index.mdx
@@ -1,7 +1,79 @@
 import DefaultPage from "../../../components/default-page";
+import { DBCard } from "../../../../../output/react/src";
 
-import Readme from "../../../../../packages/foundations/docs/Playgrounds.md";
+# Playgrounds
 
-<Readme />
+You can try out our components on StackBlitz or CodeSandbox without downloading or installing anything on your local machine.
+
+We would also appreciate it if you could provide a working example when opening an issue in our repository. Please keep in mind not to share any internal information or data this way, not even in screenshots. This includes internal URLs. Only use sample material.
+
+<section class="playground">
+
+    ## CodeSandbox
+
+    <a href="https://codesandbox.io/s/github/db-ux-design-system/examples/tree/main/react-example">
+    	<DBCard behavior="interactive">
+    		<strong>React 18</strong>
+    		React app including <code>@db-ux/react-core-components</code>
+    	</DBCard>
+    </a>
+
+    <a href="https://codesandbox.io/s/github/db-ux-design-system/examples/tree/main/vue-example">
+    	<DBCard behavior="interactive">
+    		<strong>Vue 3</strong>
+    		Vue app including <code>@db-ux/v-core-components</code>
+    	</DBCard>
+    </a>
+
+    <a href="https://codesandbox.io/s/github/db-ux-design-system/examples/tree/main/angular17-example">
+    	<DBCard behavior="interactive">
+    		<strong>Angular 17</strong>
+    		Angular app including <code>@db-ux/ngx-core-components</code>
+    	</DBCard>
+    </a>
+
+    <a href="https://codesandbox.io/s/github/db-ux-design-system/examples/tree/main/react-tailwind-template">
+    	<DBCard behavior="interactive">
+    		<strong>React 18 + tailwind</strong>
+    		React + tailwind app including <code>@db-ux/react-core-components</code>
+    	</DBCard>
+    </a>
+
+</section>
+
+<section class="playground">
+
+    ## StackBlitz
+
+    <a href="https://stackblitz.com/fork/github/db-ux-design-system/examples/tree/main/react-example?file=index.html">
+    	<DBCard behavior="interactive">
+    		<img src="img/react-showcase.svg" alt="" />
+    		<strong>React 18</strong>
+    		React app including <code>@db-ux/react-core-components</code>
+    	</DBCard>
+    </a>
+
+    <a href="https://stackblitz.com/fork/github/db-ux-design-system/examples/tree/main/vue-example?file=index.html">
+    	<DBCard behavior="interactive">
+    		<strong>Vue 3</strong>
+    		Vue app including <code>@db-ux/v-core-components</code>
+    	</DBCard>
+    </a>
+
+    <a href="https://stackblitz.com/fork/github/db-ux-design-system/examples/tree/main/angular17-example?file=index.html">
+    	<DBCard behavior="interactive">
+    		<strong>Angular 17</strong>
+    		Angular app including <code>@db-ux/ngx-core-components</code>
+    	</DBCard>
+    </a>
+
+    <a href="https://stackblitz.com/fork/github/db-ux-design-system/examples/tree/main/react-tailwind-template?file=index.html">
+    	<DBCard behavior="interactive">
+    		<strong>React 18 + tailwind</strong>
+    		React + tailwind app including <code>@db-ux/react-core-components</code>
+    	</DBCard>
+    </a>
+
+</section>
 
 export default ({ children }) => <DefaultPage>{children}</DefaultPage>;
