refactor: more contents

--- a/showcases/patternhub/pages/foundations/playgrounds/index.mdx
+++ b/showcases/patternhub/pages/foundations/playgrounds/index.mdx
@@ -13,6 +13,7 @@ We would also appreciate it if you could provide a working example when opening 
 
     <a href="https://codesandbox.io/s/github/db-ux-design-system/examples/tree/main/react-example">
     	<DBCard behavior="interactive">
+    		![](/assets/images/react-showcase.svg)
     		<strong>React 18</strong>
     		React app including <code>@db-ux/react-core-components</code>
     	</DBCard>
@@ -20,6 +21,7 @@ We would also appreciate it if you could provide a working example when opening 
 
     <a href="https://codesandbox.io/s/github/db-ux-design-system/examples/tree/main/vue-example">
     	<DBCard behavior="interactive">
+    		![](/assets/images/vue-showcase.svg)
     		<strong>Vue 3</strong>
     		Vue app including <code>@db-ux/v-core-components</code>
     	</DBCard>
@@ -27,6 +29,7 @@ We would also appreciate it if you could provide a working example when opening 
 
     <a href="https://codesandbox.io/s/github/db-ux-design-system/examples/tree/main/angular17-example">
     	<DBCard behavior="interactive">
+    		![](/assets/images/angular-showcase.svg)
     		<strong>Angular 17</strong>
     		Angular app including <code>@db-ux/ngx-core-components</code>
     	</DBCard>
@@ -34,6 +37,7 @@ We would also appreciate it if you could provide a working example when opening 
 
     <a href="https://codesandbox.io/s/github/db-ux-design-system/examples/tree/main/react-tailwind-template">
     	<DBCard behavior="interactive">
+    		![](/assets/images/react-wind-showcase.svg)
     		<strong>React 18 + tailwind</strong>
     		React + tailwind app including <code>@db-ux/react-core-components</code>
     	</DBCard>
@@ -47,7 +51,7 @@ We would also appreciate it if you could provide a working example when opening 
 
     <a href="https://stackblitz.com/fork/github/db-ux-design-system/examples/tree/main/react-example?file=index.html">
     	<DBCard behavior="interactive">
-    		<img src="img/react-showcase.svg" alt="" />
+    		![](/assets/images/react-showcase.svg)
     		<strong>React 18</strong>
     		React app including <code>@db-ux/react-core-components</code>
     	</DBCard>
@@ -55,6 +59,7 @@ We would also appreciate it if you could provide a working example when opening 
 
     <a href="https://stackblitz.com/fork/github/db-ux-design-system/examples/tree/main/vue-example?file=index.html">
     	<DBCard behavior="interactive">
+    		![](/assets/images/vue-showcase.svg)
     		<strong>Vue 3</strong>
     		Vue app including <code>@db-ux/v-core-components</code>
     	</DBCard>
@@ -62,6 +67,7 @@ We would also appreciate it if you could provide a working example when opening 
 
     <a href="https://stackblitz.com/fork/github/db-ux-design-system/examples/tree/main/angular17-example?file=index.html">
     	<DBCard behavior="interactive">
+    		![](/assets/images/angular-showcase.svg)
     		<strong>Angular 17</strong>
     		Angular app including <code>@db-ux/ngx-core-components</code>
     	</DBCard>
@@ -69,6 +75,7 @@ We would also appreciate it if you could provide a working example when opening 
 
     <a href="https://stackblitz.com/fork/github/db-ux-design-system/examples/tree/main/react-tailwind-template?file=index.html">
     	<DBCard behavior="interactive">
+    		![](/assets/images/react-wind-showcase.svg)
     		<strong>React 18 + tailwind</strong>
     		React + tailwind app including <code>@db-ux/react-core-components</code>
     	</DBCard>
