--- a/docs/migration/v2.x.x-to-v3.0.0.md
+++ b/docs/migration/v2.x.x-to-v3.0.0.md
@@ -22,7 +22,7 @@ It wasn't implemented in any framework causing some confusion, and we will reint
 ### `behavior='interactive'` change
 
 We changed the `behavior='interactive'` property not applying `role='button'` and `tabIndex` anymore.
-If you want to use an interactive card, you should wrap the card with the correct HTML element, like a `button` or `a` tag:
+If you want to use an interactive card, you should wrap the card with the correct HTML element, like a `button` or an `a` HTML tag:
 
 ```html
 <!--Angular-->
