refactor: some optimizations

--- a/showcases/patternhub/pages/foundations/playgrounds/index.mdx
+++ b/showcases/patternhub/pages/foundations/playgrounds/index.mdx
@@ -15,7 +15,7 @@ We would also appreciate it if you could provide a working example when opening 
     	<DBCard behavior="interactive">
     		![](/assets/images/react-showcase.svg)
     		<strong>React 18</strong>
-    		React app including <code>@db-ux/react-core-components</code>
+    		React app including `@db-ux/react-core-components`
     	</DBCard>
     </a>
 
@@ -23,7 +23,7 @@ We would also appreciate it if you could provide a working example when opening 
     	<DBCard behavior="interactive">
     		![](/assets/images/vue-showcase.svg)
     		<strong>Vue 3</strong>
-    		Vue app including <code>@db-ux/v-core-components</code>
+    		Vue app including `@db-ux/v-core-components`
     	</DBCard>
     </a>
 
@@ -31,7 +31,7 @@ We would also appreciate it if you could provide a working example when opening 
     	<DBCard behavior="interactive">
     		![](/assets/images/angular-showcase.svg)
     		<strong>Angular 17</strong>
-    		Angular app including <code>@db-ux/ngx-core-components</code>
+    		Angular app including `@db-ux/ngx-core-components`
     	</DBCard>
     </a>
 
@@ -39,7 +39,7 @@ We would also appreciate it if you could provide a working example when opening 
     	<DBCard behavior="interactive">
     		![](/assets/images/react-wind-showcase.svg)
     		<strong>React 18 + tailwind</strong>
-    		React + tailwind app including <code>@db-ux/react-core-components</code>
+    		React + tailwind app including `@db-ux/react-core-components`
     	</DBCard>
     </a>
 
@@ -53,7 +53,7 @@ We would also appreciate it if you could provide a working example when opening 
     	<DBCard behavior="interactive">
     		![](/assets/images/react-showcase.svg)
     		<strong>React 18</strong>
-    		React app including <code>@db-ux/react-core-components</code>
+    		React app including `@db-ux/react-core-components`
     	</DBCard>
     </a>
 
@@ -61,7 +61,7 @@ We would also appreciate it if you could provide a working example when opening 
     	<DBCard behavior="interactive">
     		![](/assets/images/vue-showcase.svg)
     		<strong>Vue 3</strong>
-    		Vue app including <code>@db-ux/v-core-components</code>
+    		Vue app including `@db-ux/v-core-components`
     	</DBCard>
     </a>
 
@@ -69,7 +69,7 @@ We would also appreciate it if you could provide a working example when opening 
     	<DBCard behavior="interactive">
     		![](/assets/images/angular-showcase.svg)
     		<strong>Angular 17</strong>
-    		Angular app including <code>@db-ux/ngx-core-components</code>
+    		Angular app including `@db-ux/ngx-core-components`
     	</DBCard>
     </a>
 
@@ -77,7 +77,7 @@ We would also appreciate it if you could provide a working example when opening 
     	<DBCard behavior="interactive">
     		![](/assets/images/react-wind-showcase.svg)
     		<strong>React 18 + tailwind</strong>
-    		React + tailwind app including <code>@db-ux/react-core-components</code>
+    		React + tailwind app including `@db-ux/react-core-components`
     	</DBCard>
     </a>
 
