--- a/docs/migration/v2.x.x-to-v3.0.0.md
+++ b/docs/migration/v2.x.x-to-v3.0.0.md
@@ -4,12 +4,12 @@
 
 We aligned some variables with design.
 
-`db-adaptive-bg-basic-transparent-hovered` become:
+`db-adaptive-bg-basic-transparent-hovered` becomes:
 
 - `db-adaptive-bg-basic-transparent-full-hovered`
 - `db-adaptive-bg-basic-transparent-semi-hovered`
 
-`db-adaptive-bg-basic-transparent-pressed` become:
+`db-adaptive-bg-basic-transparent-pressed` becomes:
 
 - `db-adaptive-bg-basic-transparent-full-pressed`
 - `db-adaptive-bg-basic-transparent-semi-pressed`
