refactor: variables for transparent-hovered/-pressed (#4565)
* refactor: variables for transparent-hovered/-pressed

* auto update snapshots (#4574)

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

* Update v2.x.x-to-v3.0.0.md

---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
Co-authored-by: Maximilian Franzke <787658+mfranzke@users.noreply.github.com>

--- a/docs/migration/v2.x.x-to-v3.0.0.md
+++ b/docs/migration/v2.x.x-to-v3.0.0.md
@@ -1,5 +1,19 @@
 ## Migration Beta (1.x.x) ➡ 2.0.0
 
+## transparent-hovered/-pressed
+
+We aligned some variables with design.
+
+`db-adaptive-bg-basic-transparent-hovered` becomes:
+
+- `db-adaptive-bg-basic-transparent-full-hovered`
+- `db-adaptive-bg-basic-transparent-semi-hovered`
+
+`db-adaptive-bg-basic-transparent-pressed` becomes:
+
+- `db-adaptive-bg-basic-transparent-full-pressed`
+- `db-adaptive-bg-basic-transparent-semi-pressed`
+
 ## db-button/DBButton type
 
 ### `type` property
@@ -51,7 +65,7 @@ We updated some breakpoints to align with design:
 
 We renamed the `data-icon-after` and `data-icon-before` properties to `data-icon-trailing` and `data-icon-leading`,
 as well the properties in components to `iconTrailing` and/or `iconLeading`.
-Furthermore, we added the possibility to set a a trailing icon on the `db-button`/`DBButton` component.
+Furthermore, we added the possibility to set a trailing icon on the `db-button`/`DBButton` component.
 
 You can still use `db-icon`/`icon` in most elements/components, which results in showing the default icon.
 Most of the time this will be the leading icon, but in some cases it might be the trailing icon, depending on the component.
