fix: issue with patternhub build

--- a/showcases/patternhub/pages/foundations/playgrounds/index.mdx
+++ b/showcases/patternhub/pages/foundations/playgrounds/index.mdx
@@ -1,5 +1,5 @@
 import DefaultPage from "../../../components/default-page";
-import { DBCard } from "../../../../../output/react/src";
+import { DBCard } from "@components";
 
 # Playgrounds
 
