docs: update playgrounds

--- a/docs/migration/v3.x.x-to-v4.0.0.md
+++ b/docs/migration/v3.x.x-to-v4.0.0.md
@@ -10,7 +10,7 @@ having a Slot with `subNavigation`.
 
 For a detailed migration based on framework checkout those:
 
-- Angular
+- [Angular](300-400/shell/Angular.md)
 - [React](300-400/shell/React.md)
 - [Vue](300-400/shell/Vue.md)
 
